fix header alignment, fill out rush hour

--- a/subpages/subpage.css
+++ b/subpages/subpage.css
@@ -29,8 +29,7 @@ body {
 .header {
   color: var(--background-1);
   background-color: var(--primary-1);
-  width: 101vw;
-  height: 7vw;
+  width: 100.4vw;
   margin: -1vw;
   margin-bottom: 50px;
 }
@@ -58,7 +57,7 @@ body {
   display: inline-block;
   all: unset;
   font-size: 3vw;
-  padding: 1.75vw 4vw;
+  padding: 0vw 4vw;
   cursor:pointer
 }
 
@@ -111,20 +110,22 @@ body {
 
 
 /* Stuff relevant to subpages */
+p {
+  line-height: 35px;
+}
+
 .title {
-  font-size: 35px;
+  font-size: 45px;
   font-weight: bold;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
 }
 
 .subtitle {
   color: var(--black);
-  font-size: 25px;
-  font-family: Verdana, Geneva, sans-serif;
+  font-size: 30px;
   font-weight: bold;
-  margin-bottom: 40px;
-  text-align: center;
+  margin-bottom: 20px;
 }
 
 .headerDate {
@@ -146,6 +147,7 @@ body {
   margin-right: 1.5vw;
   text-decoration: none;
   border-radius: 1vw;
+  box-shadow: 2px 2px 2px 1px var(--text-color);
 }
 
 .repoButton:hover {
